# goose

./: .gitignore  Cargo.toml  Justfile  PLAN.md
.github/workflows/: bundle-desktop-intel.yml  bundle-desktop-linux.yml  bundle-desktop-manual.yml  bundle-desktop-windows.yml  bundle-desktop.yml  ci.yml  maven-sdk.yml  pr-smoke-test.yml  publish-npm.yml  release.yml
crates/goose/: Cargo.toml  acp-schema.json
crates/goose-cli/: Cargo.toml
crates/goose-cli/src/: cli.rs
crates/goose-local-inference/: Cargo.toml
crates/goose-local-inference/src/: hf_models.rs  mlx.rs
crates/goose-provider-types/: Cargo.toml
crates/goose-provider-types/src/: base.rs  errors.rs  lib.rs  retry.rs  time.rs
crates/goose-providers/: Cargo.toml
crates/goose-providers/src/: anthropic.rs  api_client.rs  azure.rs  azureauth.rs  databricks.rs  databricks_v2.rs  declarative.rs  google.rs  http_status.rs  lib.rs  models.rs  ollama.rs  openai.rs  openai_compatible.rs  snowflake.rs  subprocess_ext.rs
crates/goose-sdk/: README.md  justfile
crates/goose-sdk/maven/: build.gradle.kts
crates/goose-sdk/scripts/: prepare-maven-package.sh
crates/goose-sdk/src/: bindings.rs  custom_requests.rs
crates/goose-server/: Cargo.toml
crates/goose-types/: Cargo.toml
crates/goose-types/src/: errors.rs  (+1 more)
documentation/static/: servers.json
examples/wasm-openai-provider-poc/: Cargo.toml  README.md  index.html  proxy.mjs
examples/wasm-openai-provider-poc/src/: lib.rs
ui/: pnpm-lock.yaml
ui/desktop/: openapi.json  package.json  vite.main.config.mts
ui/sdk/: INSTALL_SCENARIOS.md  package.json
(+239 files in other folders)
