[workspace]

[package]
name = "wasm-openai-provider-poc"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
futures = "0.3"
goose-providers = { path = "../../crates/goose-providers", default-features = false }
js-sys = "0.3.103"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
